Added Ability to select between driving and public transport

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -7,6 +7,7 @@
       {{ render_field(form.source) }}
       {{ render_field(form.destination1)}}
       {{ render_field(form.destination2)}}
+      {{ render_field(form.transport)}}
     </dl>
     <p><input type=submit value=Submit>
   </form>
